ingressroutes/ingress/argocd-ingress.yaml
apiVersion: v1
items:
- apiVersion: traefik.containo.us/v1alpha1
  kind: IngressRoute
  metadata:
    name: argocd-http
    namespace: argocd
  spec:
    entryPoints:
    - web
    routes:
    - kind: Rule
      match: Host(`argocd.k8s.lenin.nu`)
      middlewares:
        - name: httpsredirect
          namespace: traefik
      services:
      - name: argocd-server
        port: 80
    - kind: Rule
      match: Host(`argocd.k8s.lenin.nu`)
      middlewares:
        - name: httpsredirect
          namespace: traefik
      services:
      - name: argocd-server
        port: 443
- apiVersion: traefik.containo.us/v1alpha1
  kind: IngressRoute
  metadata:
    name: argocd-https
    namespace: argocd
  spec:
    entryPoints:
    - websecure
    routes:
    - kind: Rule
      match: Host(`argocd.k8s.lenin.nu`)
      services:
      - name: argocd-server
        port: 80
            - kind: Rule
              match: Host(`argocd.k8s.lenin.nu`)
              services:
              - name: argocd-server
                port: 443
kind: List
